Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: jekyll-rtd-theme
 description: Just another documentation theme compatible with GitHub Pages
 
-theme: null
+theme: jekyll-theme-cayman
 
 # debug:
 #   compress: true
